--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Mediacom Executive Summit / Google NYC</title>
+  <title>CEO Summit Google NYC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Mediacom Executive Summit in NYC with Google">
-  <meta name="keywords" content="Mediacom, Mediacom Executive Summit NYC, NYC, Google">
+  <meta name="keywords" content="CEO, CEO Summit NYC, NYC, Google">
 
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -70,7 +70,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Mediacom Executive Summit</a>
+        <a class="navbar-brand" href="#">CEO Summit NYC</a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav navbar-right" id="nav">
@@ -89,7 +89,7 @@
   <div id="home">
     <div class="banner">
       <div class="container">
-        <h1>Mediacom Executive Summit</h1>
+        <h1>CEO Summit NYC</h1>
         <div id="home-slider" class="flexslider">
           <ul class="slides">
             <li><h3>Shaping the future together - Technology and Partnerships in a connected world</h3></li>
@@ -113,13 +113,13 @@
         <h1>Willkommen!</h1>
         <hr>
       </div>
-      <p class="about-text">Herzlich Willkommen zu unserer bevorstehenden Reise nach New York. Wir freuen uns auf drei spannende und gefüllte Tage, zugeschnitten auf eine ausgewählte Anzahl an Geschäftsführern der Mediacom - euch! Wir hoffen, die bevorstehenden Einblicke und Diskussionen werden neue Möglichkeiten und Ideen bzgl. des Themas Digital eröffnen und auch unsere Partnerschaft weiter stärken. Wir freuen uns auf euch, bis bald!</p>
+      <p class="about-text">Herzlich Willkommen zu unserer bevorstehenden Reise nach New York. Wir freuen uns auf 1,5 spannende und gefüllte Tage, zugeschnitten auf Euch! Wir hoffen, die bevorstehenden Einblicke und Diskussionen werden neue Möglichkeiten rund um das Thema Performance eröffnen und auch unsere Partnerschaft weiter stärken. Wir freuen uns auf Euch, Bis Bald!</p>
       <div class="col-md-3 col-sm-6 col-xs-12">
         <article class="feature animated hiding" data-animation="bounceIn" data-delay="0">
           <div class="heading-content">
-            <h3>Sonntag, 28.08.</h3>
+            <h3>Montag, 17.10.</h3>
           </div>
-          <p>Willkommen in New York! Heute um 19.30 Uhr gibt es ein Welcome Dinner im <a href="http://www.buddakannyc.com/"  target="_blank">Buddakan</a>.
+          <p>Welcome to New York City! Für den perfekten Start zur Summit treffen wir uns um 17:00 Uhr in der Hotel Lobby des <a href="http://www.buddakannyc.com/"  target="_blank">Buddakan</a>, einem der angesagtesten Restaurants der Stadt.
           <a href="https://www.google.de/maps/place/Buddakan/@40.7422787,-74.0048194,15z/data=!4m5!3m4!1s0x0:0x4f1608274f5e6fe6!8m2!3d40.7422787!4d-74.0048194"  target="_blank">Map</a> </p>
         </article>
       </div>
