--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
           <div class="heading-content">
             <h3>Dienstag, 18.10.</h3>
           </div>
-          <p>Summit Tag 1 von 9:00 - 18:00 Uhr im Google Office. Heute verlassen wir den Alltag, um diesen anschließend wieder begeistert und mit vielen tollen Insights zu betreten.<a href="https://www.google.de/maps/place/Google/@40.7417482,-74.0064081,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259bf14f1f51f:0xcc1b5ab35bd75df0!8m2!3d40.7417482!4d-74.0042194?hl=en"  target="_blank">Map</a></p>
+          <p>Summit Tag 1 von 9:00 - 18:00 Uhr im Google Office. Heute verlassen wir den Alltag, um diesen anschließend wieder begeistert und mit vielen tollen Insights zu betreten.
+	  <a href="https://www.google.de/maps/place/Google/@40.7417482,-74.0064081,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259bf14f1f51f:0xcc1b5ab35bd75df0!8m2!3d40.7417482!4d-74.0042194?hl=en"  target="_blank">Map</a></p>
         </article>
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12">
@@ -136,7 +137,8 @@
           <div class="heading-content">
             <h3>Mittwoch, 19.10.</h3>
           </div>
-          <p>Summit Tag 2 von 9:00 - 13:00 Uhr im Google Office. Uns erwartet ein ganzer Tag voller Inspiration, Innovation und spannender Start-Ups.<a href="https://www.google.de/maps/place/Google/@40.7417482,-74.0064081,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259bf14f1f51f:0xcc1b5ab35bd75df0!8m2!3d40.7417482!4d-74.0042194?hl=en"  target="_blank">Map</a></p>
+          <p>Summit Tag 2 von 9:00 - 13:00 Uhr im Google Office. Uns erwartet ein ganzer Tag voller Inspiration, Innovation und spannender Start-Ups.
+	  <a href="https://www.google.de/maps/place/Google/@40.7417482,-74.0064081,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259bf14f1f51f:0xcc1b5ab35bd75df0!8m2!3d40.7417482!4d-74.0042194?hl=en"  target="_blank">Map</a></p>
         </article>
       </div>
      
