--- a/index.html
+++ b/index.html
@@ -154,100 +154,149 @@
     </div>
       <div class="container">
         <ul class="timeline">
-        <li class="year">So.</li>
+        <li class="year">Mo.</li>
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
+            <h4>Überraschung</h4>
+            <p>Treffpunkt: Lobby The Walker Hotel</p>
+            <span class="date">17.10.2016 | 17:00</span>
+          </div>
+        </li>
+	     <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
             <h4>Welcome Dinner</h4>
             <p>Buddakan</p>
-            <span class="date">28.08.2016 | 19:30</span>
+            <span class="date">17.10.2016 | 20:30</span>
           </div>
         </li>
-        	<li class="year">Mo.</li>
+        	<li class="year">Di.</li>
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Breakfast</h4>
-            <p>Google Canteen</p>
-            <span class="date">29.08.2015 | 09:00 - 09:30</span>
+            <h4>Welcome</h4>
+            <p>Petri Kokko</p>
+            <span class="date">18.10.2016 | 09:00 - 09:15</span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Welcome, Introduction & Summit Overview</h4>
-            <p>Google - MC Team</p>
-            <span class="date">29.08.2015 | 09:30 - 10:00</span>
+            <h4>Welcome & Introduction</h4>
+            <p>Melania van Hümmel</p>
+            <span class="date">18.10.2016 | 09:15 - 09:45</span>
           </div>
         </li>
               <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Google New York & Global Agency Insights</h4>
-            <p>Torrence Boone</p>
-            <span class="date">29.08.2015 | 10:00 - 10:45</span>
+            <h4>Insights of an US performance agency</h4>
+            <p>George Manas, President Resolution Media</p>
+            <span class="date">18.10.2016 | 09:45 - 10:15</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Mediacom DE Client - Insights & Benchmarks from US</h4>
+            <h4>TBA</h4>
             <p>TBA</p>
-            <span class="date">29.08.2015 | 10:45 - 11:30</span>
+            <span class="date">18.10.2016 | 10:15 - 11:00</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Break</h4>
             <p>All</p>
-            <span class="date">29.08.2015 | 11:30 - 11:45</span>
+            <span class="date">18.10.2016 | 11:00 - 11:15</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Insights into the Google Culture (HR)</h4>
-            <p>TBA</p>
-            <span class="date">29.08.2015 | 11:45 - 12:30</span>
+            <h4>Branding - YouTube</h4>
+            <p>Tobias Walter</p>
+            <span class="date">18.10.2016 | 11:15 - 12:00</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
+            <h4>Morning re-cap</h4>
+            <p>All</p>
+            <span class="date">18.10.2016 | 12:00 - 12:15</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
             <h4>Lunch</h4>
-            <p>All</p>
-            <span class="date">29.08.2015 | 12:30 - 14:00</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
-            <h4>Creative Excellence in Branding</h4>
-            <p>TBA</p>
-            <span class="date">29.08.2015 | 14:00 - 15:00</span>
+            <p>Google Canteen</p>
+            <span class="date">18.10.2016 | 12:15 - 13:30</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Innovation@Google - Engineering / GoogleX</h4>
-            <p>All</p>
-            <span class="date">29.08.2015 | 15:00 - 15:45</span>
+            <h4>Campus Tour</h4>
+            <p>André Moraes</p>
+            <span class="date">18.10.2016 | 13:30 - 14:00</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Online to Store</h4>
+            <p>Sam Duncan</p>
+            <span class="date">18.10.2016 | 14:00 - 14:45</span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
+            <h4>The Future of Google Shopping</h4>
+            <p>Joe Rosenberg</p>
+            <span class="date">18.10.2016 | 14:45 - 15:30</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Break</h4>
             <p>All</p>
-            <span class="date">29.08.2015 | 15:45 - 16:00</span>
+            <span class="date">18.10.2016 | 15:30 - 15:45</span>
           </div>
         </li>
-            <li class="animated hiding" data-animation="fadeInRight">
+	   <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Wrap Up, Agency and Client`s Insights & Next Steps</h4>
-            <p>TBA</p>
-            <span class="date">29.08.2015 | 16:00 - 17:00</span>
+            <h4>Cross-Device Conversions - Attribution</h4>
+            <p>Marlena Laszkowska</p>
+            <span class="date">18.10.2016 | 15:45 - 16:15</span>
           </div>
         </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
+	<li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>BBQ-Dinner</h4>
-            <p>at Google Panorama Café, Rooftop</p>
-            <span class="date">29.08.2015 | 18:30 - 21:00</span>
+            <h4>Mobile Trends & New Technologies</h4>
+            <p>Lauren Epshteyn</p>
+            <span class="date">18.10.2016 | 16:15 - 17:00</span>
           </div>
         </li>
-        	<li class="year">Di.</li>
+	<li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
+            <h4>DS Vision, Roadmap, and Smart Bidding deep-dive</h4>
+            <p>Christina Connor</p>
+            <span class="date">18.10.2016 | 17:00 - 17:45</span>
+          </div>
+        </li>
+	<li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Wrap Up</h4>
+            <p>Melania van Hümmel</p>
+            <span class="date">18.10.2016 | 17:45 - 18:00</span>
+          </div>
+        </li>
+		<li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
+            <h4>JIMMY at The James New York</h4>
+            <p>www.jimmysoho.com</p>
+            <span class="date">18.10.2016 | 20:00</span>
+          </div>
+        </li>
+        	<li class="year">Mi.</li>
+	<li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Welcome & Recap of Day 1</h4>
+            <p>Google - MC Team</p>
+            <span class="date">30.08.2015 | 09:30 - 10:00</span>
+          </div>
+        </li>
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakfast</h4>
