--- a/index.html
+++ b/index.html
@@ -293,108 +293,59 @@
 	<li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Welcome & Recap of Day 1</h4>
-            <p>Google - MC Team</p>
-            <span class="date">30.08.2015 | 09:30 - 10:00</span>
+            <p>Melania van Hümmel</p>
+            <span class="date">19.10.2016 | 09:00 - 09:15</span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Breakfast</h4>
-            <p>Google Canteen</p>
-            <span class="date">30.08.2015 | 09:00 - 09:30</span>
+            <h4>Meet the Start Ups</h4>
+            <p>ALL</p>
+            <span class="date">19.10.2016 | 09:15 - 10:15</span>
           </div>
         </li>
         <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Welcome & Recap of Day 1</h4>
-            <p>Google - MC Team</p>
-            <span class="date">30.08.2015 | 09:30 - 10:00</span>
+            <h4>Innovation @ Google</h4>
+            <p>Danielle Hair</p>
+            <span class="date">19.10.2016 | 10:15 - 10:45</span>
           </div>
         </li>
         <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>The Mobile Disruption</h4>
-            <p>TBA</p>
-            <span class="date">30.08.2015 | 10:00 - 11:00</span>
-          </div>
-        </li>
-        <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
             <h4>Break</h4>
-            <p>All</p>
-            <span class="date">30.08.2015 | 11:00 - 11:15</span>
+            <p>ALL</p>
+            <span class="date">19.10.2016 | 10:45 - 11:00</span>
+          </div>
+        </li>
+        <li class="animated hiding" data-animation="fadeInLeft">
+          <div class="timeline-panel left">
+            <h4>Artificial Intelligence</h4>
+            <p>Afshin Rostamizadeh</p>
+            <span class="date">19.10.2016 | 11:00 - 11:30</span>
           </div>
         </li>
         <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Mobile @ Google - A Developer`s (secret) projects</h4>
-            <p>TBA</p>
-            <span class="date">30.08.2015 | 11:15 - 12:00</span>
+              <h4>Wrap Up</h4>
+            <p>Melania van Hümmel</p>
+            <span class="date">19.10.2016 | 11:30 - 12:00</span>
           </div>
         </li>
           <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Lunch</h4>
-            <p>All</p>
-            <span class="date">30.08.2015 | 12:00 - 13:00</span>
+            <h4>Lunch (optional)</h4>
+            <p>Google Canteen</p>
+            <span class="date">19.10.2016 | 12:00 - 13:00</span>
           </div>
         </li>
          <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Programmatic Evolution - Intro</h4>
-            <p>Lucas Brinkmann</p>
-            <span class="date">30.08.2015 | 13:00 - 13:15</span>
+            <h4>Abreise</h4>
+            <p>ALL</p>
+            <span class="date">19.10.2016 | 13:00</span>
           </div>
-        </li>
-           <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
-            <h4>Programmatic & Data for Agency Overview</h4>
-            <p>Ambrish Mody</p>
-            <span class="date">30.08.2015 | 13:15 - 13:45</span>
-          </div>
-        </li>
-	      <li class="animated hiding" data-animation="fadeInRight">
-	         <div class="timeline-panel right">
-	           <h4>Overview into Google Audiences</h4>
-	          <p>Cristian Shoemaker</p>
-	         <span class="date">30.08.2015 | 13:45 - 14:30</span>
-	       </div>
-	    </li>
-	    <li class="animated hiding" data-animation="fadeInLeft">
-	         <div class="timeline-panel left">
-	           <h4>Overview into Programmatic Guaranteed</h4>
-	          <p>Jessica Nussbaum</p>
-	         <span class="date">30.08.2015 | 14:30 - 15:15</span>
-	       </div>
-	     </li>
-	     <li class="animated hiding" data-animation="fadeInRight">
-	         <div class="timeline-panel right">
-	           <h4>Break</h4>
-	          <p>All</p>
-	         <span class="date">30.08.2015 | 15:15 - 15:30</span>
-	       </div>
-	    </li>
-	    <li class="animated hiding" data-animation="fadeInLeft">
-	         <div class="timeline-panel left">
-	           <h4>“Analytics”</h4>
-	          <p>Josh Wilkinson TBC</p>
-	         <span class="date">30.08.2015 | 15:30 - 16:15</span>
-	       </div>
-	     </li>
-	      <li class="animated hiding" data-animation="fadeInRight">
-	         <div class="timeline-panel right">
-	           <h4>“US Agency Programmatic”</h4>
-	          <p>Adrian Mulryan TBC</p>
-	         <span class="date">30.08.2015 | 16:15 - 17:00</span>
-	       </div>
-	    </li>
-	    <li class="animated hiding" data-animation="fadeInLeft">
-	         <div class="timeline-panel left">
-	           <h4>Summit Wrap Up, Next Steps & Goodbye</h4>
-	          <p>Google - MC Team</p>
-	         <span class="date">30.08.2015 | 17:00 - 18:00</span>
-	       </div>
-	     </li>
+        
 	    <li class="year"><i class="fa fa-road"></i></li>
         </ul>
     </div>
