--- a/index.html
+++ b/index.html
@@ -360,6 +360,11 @@
       </div>
       <p>That seems to be the philosophy that Stephen Starr brought to Buddakan, a restaurant as flashy as any this city has seen. Buddakan is the apotheosis, at least for the next 60 seconds, of a distinct genre: the post-millennial urban mess hall as supersize cocktail lounge with superstylized dishes, which chart a far-out trip to the Far East. The specific cuisine in its sights is Chinese, and the real surprise is how good many of Buddakan's alternately faithful and fanciful interpretations of it are. A restaurant this sexy doesn't need to be smart.</p>
       <a href="https://www.google.de/maps/place/Buddakan/@40.7422787,-74.0048194,15z/data=!4m5!3m4!1s0x0:0x4f1608274f5e6fe6!8m2!3d40.7422787!4d-74.0048194" target="_blank" class="btn btn-custom">Map</a>
+	  <h1>Buddakan</h1>
+        <hr>
+      </div>
+      <p>That seems to be the philosophy that Stephen Starr brought to Buddakan, a restaurant as flashy as any this city has seen. Buddakan is the apotheosis, at least for the next 60 seconds, of a distinct genre: the post-millennial urban mess hall as supersize cocktail lounge with superstylized dishes, which chart a far-out trip to the Far East. The specific cuisine in its sights is Chinese, and the real surprise is how good many of Buddakan's alternately faithful and fanciful interpretations of it are. A restaurant this sexy doesn't need to be smart.</p>
+      <a href="https://www.google.de/maps/place/Buddakan/@40.7422787,-74.0048194,15z/data=!4m5!3m4!1s0x0:0x4f1608274f5e6fe6!8m2!3d40.7422787!4d-74.0048194" target="_blank" class="btn btn-custom">Map</a>
     </div>
   </section>
   <!-- End Call to action -->
