--- a/index.html
+++ b/index.html
@@ -368,6 +368,14 @@
       <p>18 stories high atop The James Hotel in Soho, JIMMY is a contemporary interpretation of the classic pub, with a 1970’s New York twist. Created and curated by David Rabin and Johnny Swet, the atmosphere is intimate and refined, with lingham wood floors, swank modular furniture, dark cinnamon glazed tile walls, and a working fireplace – all surrounded by 14’ windows with panoramic views of Midtown, Wall Street, the Hudson River, and the bridges spanning the East River.</p>
       <a href="https://www.google.de/maps/place/Jimmy/@40.7224799,-74.0047807,15z/data=!4m5!3m4!1s0x0:0x5b24baebc67681fb!8m2!3d40.7224799!4d-74.0047807" target="_blank" class="btn btn-custom">Map</a>
     </div>
+	<div class="col-sm-5 col-sm-offset-2 col-md-12 col-md-offset-0">
+      <div class="title">  
+	<h1>Walker Hotel Greenwich Village</h1>
+        <hr>
+      </div>
+      <p>This retro-chic hotel in Greenwich Village is a 4-minute walk from the West 14th Street subway station and a 7-minute walk from Union Square.</p>
+      <a href="https://www.google.de/maps/place/Walker+Hotel+Greenwich+Village/@40.7362184,-73.9966292,15z/data=!4m5!3m4!1s0x0:0x23246292c8950105!8m2!3d40.7362184!4d-73.9966292" target="_blank" class="btn btn-custom">Map</a>
+    </div>
   </section>
   <!-- End Call to action -->
   <!-- Works -->
