--- a/index.html
+++ b/index.html
@@ -500,19 +500,29 @@
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="500">
             <a href="#service2" data-toggle="tab">
-              <img src = "images/team/vieregg.png" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/melaniavanh.png" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1000">
             <a href="#service3" data-toggle="tab">
-              <img src = "images/team/mlaengin.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/joerg.jpeg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1500">
             <a href="#service4" data-toggle="tab">
-              <img src = "images/team/rwillenbrock.png" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/mhartwig.jpeg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
+	   <li class="animated hiding" data-animation="flipInX" data-delay="2000">
+            <a href="#service5" data-toggle="tab">
+              <img src = "images/team/hyeuon.jpeg" class="img-circle" align="middle" width="100%">
+            </a>            
+          </li>	
+	  <li class="animated hiding" data-animation="flipInX" data-delay="2500">
+            <a href="#service6" data-toggle="tab">
+              <img src = "images/team/kbuschmann.jpeg" class="img-circle" align="middle" width="100%">
+            </a>            
+          </li>	
         </ul>
         <div class="tab-content animated hiding" id="service-detail" data-animation="fadeInUp">
           <div class="tab-pane fade in active" id="service1"> 
@@ -522,26 +532,33 @@
 			<a href="mailto:petri@google.com">petri@google.com</a></p>
           </div>
         <div class="tab-pane fade" id="service2">
-            <h3>Sebastian Vieregg</h3>
+            <h3>Melania van Hümmel</h3>
             <p>Head of Agency<br />
-			Mob: +49 162  -  2122767<br />
-			<a href="mailto:sebastianv@google.com">sebastianv@google.com</a></p>
+			Mob: +49 15229401936<br />
+			<a href="mailto:melaniavanh@google.com">melaniavanh@google.com</a></p>
           </div>
           <div class="tab-pane fade" id="service3">
-            <h3>Marion Laengin</h3>
-            <p>Agency Sales Manager - Hamburg<br />	
-			Mob: +49 162 2353226<br />
-			<a href="mailto:mlaengin@google.com">mlaengin@google.com</a></p>
+            <h3>Joerg Berlage</h3>
+            <p>Head of Platforms Sales Independent Agencies<br />	
+			Mob: +49 1736328868<br />
+			<a href="mailto:joerg@google.com">joerg@google.com</a></p>
           </div>
           <div class="tab-pane fade" id="service4">
-            <h3>Roman Willenbrock</h3>
-            <p>Agency Sales Manager Media - Hamburg<br />
-			Mob: +49 1727397827<br />
-			<a href="mailto:rwillenbrock@google.com">rwillenbrock@google.com</a></p>
+            <h3>Michael Hartwig</h3>
+            <p>Director of Media Buying Solutions<br />
+			<a href="mailto:mhartwig@google.com">mhartwig@google.com</a></p>
+		</div>  
+	<div class="tab-pane fade" id="service5">
+            <h3>Hye Uon Fayolle</h3>
+            <p>Head of Agency<br />	
+			<a href="mailto:hyeuon@google.com">hyeuon@google.com</a></p>
+		</div> 
+			  <div class="tab-pane fade" id="service6">
+            <h3>Kathrin Buschmann</h3>
+            <p>Agency Sales Manager<br />	
+			Mob: +49 (172) 9406340<br />
+			<a href="mailto:kbuschmann@google.com">kbuschmann@google.com</a></p>
           </div>
-        </div>
-      </div>
-    </div>
   </section>
   <!-- End Services -->
   <!-- Footer -->
