--- a/index.html
+++ b/index.html
@@ -532,33 +532,44 @@
           </li>
         </ul>
         <div class="tab-content animated hiding" id="service-detail" data-animation="fadeInUp">
-          <div class="tab-pane fade in active" id="service1"> 
+  <div class="tab-pane fade in active" id="service1"> 
             <h3>Petri Kokko</h3>
             <p>Director, Agency<br />
 			Mob: +49 (162) 2122726<br />
 			<a href="mailto:petri@google.com">petri@google.com</a></p>
           </div>
         <div class="tab-pane fade" id="service2">
-            <h3>Sebastian Vieregg</h3>
+            <h3>Melania van Hümmel</h3>
             <p>Head of Agency<br />
-			Mob: +49 162  -  2122767<br />
-			<a href="mailto:sebastianv@google.com">sebastianv@google.com</a></p>
+			Mob: +49 15229401936<br />
+			<a href="mailto:melaniavanh@google.com">melaniavanh@google.com</a></p>
           </div>
           <div class="tab-pane fade" id="service3">
-            <h3>Marion Laengin</h3>
-            <p>Agency Sales Manager - Hamburg<br />	
-			Mob: +49 162 2353226<br />
-			<a href="mailto:mlaengin@google.com">mlaengin@google.com</a></p>
+            <h3>Joerg Berlage</h3>
+            <p>Head of Platforms Sales Independent Agencies<br />	
+			Mob: +49 1736328868<br />
+			<a href="mailto:joerg@google.com">joerg@google.com</a></p>
           </div>
           <div class="tab-pane fade" id="service4">
-            <h3>Roman Willenbrock</h3>
-            <p>Agency Sales Manager Media - Hamburg<br />
-			Mob: +49 1727397827<br />
-			<a href="mailto:rwillenbrock@google.com">rwillenbrock@google.com</a></p>
+            <h3>Michael Hartwig</h3>
+            <p>Director of Media Buying Solutions<br />
+			<a href="mailto:mhartwig@google.com">mhartwig@google.com</a></p>
+		</div>  
+	<div class="tab-pane fade" id="service5">
+            <h3>Hye Uon Fayolle</h3>
+            <p>Head of Agency<br />	
+			<a href="mailto:hyeuon@google.com">hyeuon@google.com</a></p>
+		</div> 
+			  <div class="tab-pane fade" id="service6">
+            <h3>Kathrin Buschmann</h3>
+            <p>Agency Sales Manager<br />	
+			Mob: +49 (172) 9406340<br />
+			<a href="mailto:kbuschmann@google.com">kbuschmann@google.com</a></p>
+          </div>
           </div>
         </div>
       </div>
-    </div>
+
   </section>
   <!-- End Services -->
   <!-- Footer -->
