--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <section id="about">
     <div class="container">
       <div class="picture">
-        <img src="images/picture.jpg" width="100%" class="img-circle">
+        <img src="images/team/melaniavanh.png" width="100%" class="img-circle">
       </div>
       <div class="title">
         <h1>Willkommen!</h1>
@@ -517,17 +517,27 @@
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="500">
             <a href="#service2" data-toggle="tab">
-              <img src = "images/team/vieregg.png" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/melaniavanh.png" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1000">
             <a href="#service3" data-toggle="tab">
-              <img src = "images/team/mlaengin.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/joerg.jpeg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1500">
             <a href="#service4" data-toggle="tab">
-              <img src = "images/team/rwillenbrock.png" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/mhartwig.jpeg" class="img-circle" align="middle" width="100%">
+            </a>            
+          </li>
+	<li class="animated hiding" data-animation="flipInX" data-delay="2000">
+            <a href="#service5" data-toggle="tab">
+              <img src = "images/team/hyeuon.jpeg" class="img-circle" align="middle" width="100%">
+            </a>            
+          </li>
+		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
+            <a href="#service6" data-toggle="tab">
+              <img src = "images/team/kbuschmann.jpeg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
         </ul>
