--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h1>Willkommen!</h1>
         <hr>
       </div>
-      <p class="about-text">Herzlich Willkommen zu unserer bevorstehenden Reise nach New York. Wir freuen uns auf 1,5 spannende und gefüllte Tage, zugeschnitten auf Euch! Wir hoffen, die bevorstehenden Einblicke und Diskussionen werden neue Möglichkeiten rund um das Thema Performance eröffnen und auch unsere Partnerschaft weiter stärken. Wir freuen uns auf Euch, Bis Bald!</p>
+      <p class="about-text">Herzlich Willkommen zu unserer bevorstehenden Reise nach New York. Euch erwarten zwei Tage mit spannenden und speziell für euch ausgewählte Themen. Wir hoffen, die bevorstehenden Einblicke und Diskussionen werden neue Möglichkeiten rund um das Thema Performance eröffnen und unsere Partnerschaft weiter stärken. Wir freuen uns auf Euch, Bis Bald!</p>
       <div class="col-md-3 col-sm-6 col-xs-12">
         <article class="feature animated hiding" data-animation="bounceIn" data-delay="0">
           <div class="heading-content">
