--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>TBA</h4>
-            <p>TBA</p>
+            <h4>Performance meets Creative</h4>
+            <p>Rudi Anggono</p>
             <span class="date">18.10.2016 | 10:15 - 11:00</span>
           </div>
         </li>
