--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>CEO Summit Google NYC</title>
+  <title>AAA Summit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Mediacom Executive Summit in NYC with Google">
   <meta name="keywords" content="CEO, CEO Summit NYC, NYC, Google">
