--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div id="home">
     <div class="banner">
       <div class="container">
-        <h1>CEO Summit NYC</h1>
+        <h1>AAA Summit</h1>
         <div id="home-slider" class="flexslider">
           <ul class="slides">
             <li><h3>Shaping the future together - Technology and Partnerships in a connected world</h3></li>
