--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
   <div id="home">
     <div class="banner">
       <div class="container">
-        <h1>AAA Summit</h1>
+        <h1>AAA Vertical Summit 2017</h1>
         <div id="home-slider" class="flexslider">
           <ul class="slides">
-            <li><h3>Shaping the future together - Technology and Partnerships in a connected world</h3></li>
+            <li><h3>Attribution. Automation. Analytics.</h3></li>
             <!--Hello World-->
                       </ul>
         </div>          
-        <a href="#about" class="btn btn-custom">Mehr Informationen</a>
+        <a href="#about" class="btn btn-custom">Jetzt Anmelden</a>
         <a href="#contacts" class="btn btn-empty">Kontakte</a>
       </div>
     </div>
