--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <p class="about-text">Moin Moin. Im Januar erwartet Euch ein spannendes Event in unserem Hamburger Office mit speziell für euch ausgewählten Themen. Wir hoffen, die bevorstehenden Einblicke und Diskussionen werden neue Möglichkeiten rund um die Themen Attribution, Automation und Analytics eröffnen und unsere Partnerschaft weiter stärken. Wir freuen uns auf Euch, Bis Bald!</p>
       <div class="col-md-3 col-sm-6 col-xs-12">
         <article class="feature animated hiding" data-animation="bounceIn" data-delay="0">
-          <div class="heading-content">
+          <!--<div class="heading-content">
             <h3>Montag, 17.10.</h3>
           </div>
           <p>Welcome to New York City! Für den perfekten Start zur Summit treffen wir uns um 17:00 Uhr in der Hotel Lobby des <a href="http://www.buddakannyc.com/"  target="_blank">Buddakan</a>, einem der angesagtesten Restaurants der Stadt.
