--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
     </div>
       <div class="container">
         <ul class="timeline">
-        <li class="year">Mo.</li>
+        <li class="year">Mi.</li>
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Überraschung</h4>
-            <p>Treffpunkt: Lobby The Walker Hotel</p>
-            <span class="date">17.10.2016 | 17:00</span>
+            <h4>Light Breakfast</h4>
+            <p>All</p>
+            <span class="date">18.01.2017 | 10:00</span>
           </div>
         </li>
 	     <li class="animated hiding" data-animation="fadeInRight">
